2003-12-14  James Henstridge  <james@daa.com.au>

	* modulesets/freedesktop.modules: fix cairo's dependencies.

2003-12-09  Alex Duggan  <aldug@astrolinux.com>

	* modulesets/gnome26.modules: remove linc

2003-12-08  Murray Cumming  <murrayc@usa.net>

	* modulesets/gnome26.modules: Replaced mrproject and libmrproject
	by planner.

	* modulesets/gnome24.modules: ditto

2003-12-08  Murray Cumming  <murrayc@usa.net>

	* modulesets/gnome26.modules: use HEAD branch of glade.

2003-12-07  Murray Cumming  <murrayc@usa.net>

	* modulesets/gnome26.modules: USE head branch of gnomemeeting,
	though I would be surprised if anybody can build the dependencies
	for any branch.

2003-12-05  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: use gnome-2-4 branch of libbonoboui.

2003-12-04  Alex Graveley  <orphennui@yahoo.com>

	* modulesets/gnome26.modules: Add gnome-keyring, and make
	libgnomeui depend on it.

2003-12-04  Jon K Hellan  <hellan@acm.org>

	* modulesets/gnome26.modules: gnumeric depends on libgnomeprintui 

	* modulesets/gnome24.modules: ditto

2003-12-02  Rodrigo Moya <rodrigo@gnome-db.org>

	* modulesets/gnome2?.modules: made all use mergeant 0.12.x, HEAD
	is just not ready for anything.

2003-12-01  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: use gnome-2-4 branch of libbonobo.

2003-11-21  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: use gnome-2-4 branch of libwnck.

2003-11-20 Mark Finlay <sisobATtuxfamilyDOTorg>

	* modulesets/freedesktop.modules:
	Add the X composite Manager and deps. Transparencies! yum
	xcompmgr still needs to be installed manually tho ala
	http://www.freedesktop.org/Software/XserverInstallGuide

2003-11-20  David Bordoley  <bordoley@msu.edu>

	*modulesets/gnome26.modules: Add OpenApplet.

2003-11-13  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: gnome-session and gnome-desktop: use
	gnome-2-4.

2003-11-11  James Henstridge  <james@daa.com.au>
