@@ -158,14 +158,13 @@ bootstraps = [
               3724099,
               [('gettext-changelog.patch', 1)],  # patch to unbreak gettext ...
               'gettextize --version | head -1'),
-    Bootstrap('autoconf', '2.57',
-              'http://ftp.gnu.org/gnu/autoconf/autoconf-2.57.tar.gz',
-              1074128,
+    Bootstrap('autoconf', '2.59',
+              'http://ftp.gnu.org/gnu/autoconf/autoconf-2.59.tar.bz2',
+              925073,
               [],
 	      'autoconf --version | head -1'),
     Bootstrap('libtool', '1.5',
-              #'http://ftp.gnu.org/gnu/libtool/libtool-1.5.tar.gz',
-              'http://www.gnome.org/~james/libtool-1.5.tar.gz',
+              'http://ftp.gnu.org/gnu/libtool/libtool-1.5.tar.gz',
               2816075,
               [('libtool-1.3.5-mktemp.patch' , 1),
                ('libtool-1.4.3-ltmain-SED.patch', 1),
@@ -181,11 +180,16 @@ bootstraps = [
               609618,
               [],
               'automake-1.6 --version | head -1'),
-    Bootstrap('automake-1.7', '1.7.8',
-              'http://ftp.gnu.org/gnu/automake/automake-1.7.8.tar.gz',
-              736697,
+    Bootstrap('automake-1.7', '1.7.9',
+              'http://ftp.gnu.org/gnu/automake/automake-1.7.9.tar.bz2',
+              577705,
               [],
               'automake-1.7 --version | head -1'),
+    Bootstrap('automake-1.8', '1.8',
+              'http://ftp.gnu.org/gnu/automake/automake-1.8.tar.bz2',
+              711393,
+              [],
+              'automake-1.8 --version | head -1'),
     Bootstrap('pkg-config', '0.15.0',
               'http://www.freedesktop.org/software/pkgconfig/releases/pkgconfig-0.15.0.tar.gz',
               610697,
