@@ -1,3 +1,9 @@
+2003-12-17  James Henstridge  <james@daa.com.au>
+
+	* bootstrap.py (bootstraps): change back to getting libtool from
+	gnu.org, since it is up again.  Update Autoconf to 2.59,
+	Automake-1.7 to 1.7.9 and add Automake-1.8.
+
 2003-12-14  James Henstridge  <james@daa.com.au>
 
 	* modulesets/freedesktop.modules: fix cairo's dependencies.
